<resources>
    <string name="app_name">Accounting</string>
    <string name="email_text">Почта</string>
    <string name="password_text">Пароль</string>
    <string name="register_text">Регистация</string>
    <string name="login_text">Войти</string>
    <string name="restore_password">Забыли пароль? Восстановить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Name">Имя</string>
    <string name="female">Фамилия</string>
    <string name="login_google">Войти с помощью Google</string>
    <string name="register">Зарегистрироваться</string>
    <string name="verification">
        Спасибо что зарегестрировались в приложении!
        На вашу почту выслали ссылку на подтверждение аккаунта.
        После подтверждения вы можете пользоваться своей учетной записью.
    </string>
    <string name="complite">Готово</string>
    <string name="textResetPassword">Забыли пароль?</string>
    <string name="textResetInfo">
        Введите ваш email ниже.
        На этот \nemail будет отправлена ссылка для \nвосстановления пароля
    </string>
    <string name="textResetEmailSend">
        Ссылка на сброс пароля отправлена на ваш почтовый ящик
    </string>
    <string name="cancel">Отмена</string>
    <string name="failed_email">"Неверный email"</string>
    <string name="enter_email">Введите email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="wait">Подождите</string>
    <string name="login">Вход</string>
    <string name="user_registration">Регистация пользователя</string>
    <string name="fill_in_the_details">Заполните данные</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="password_error">Пароль должен быть больше 6 символов</string>
    <string name="create_account">Создать аккаунт</string>


    //Errors
    <string name="ERROR_USER_NOT_FOUND">Пользователь не найден</string>
    <string name="ERROR_WRONG_PASSWORD">Неверный пароль</string>
    <string name="ERROR_INVALID_EMAIL">Адрес электронной почты имеет неправильный формат</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">Email адрес уже используется</string>
    <string name="ERROR_EMAIL_NOT_VERIFIED">Email не подтвержден</string>

    <string name="add_new_entry">Добавить новую запись</string>
    <string name="add">Добавить</string>
    <string name="amount">Количество</string>
    <string name="product_amount">Количество продукта</string>
    <string name="sort">Сорт</string>
    <string name="crop">Культура</string>


</resources>