<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.newEntry.NewEntryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newEntryToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/crop"
        android:layout_margin="10dp"
        style="@style/TextAppearance.MaterialComponents.Headline6"/>

    <Spinner
        android:id="@+id/spinnerCrop"
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/sort"
        android:layout_margin="10dp"
        style="@style/TextAppearance.MaterialComponents.Headline6"/>

    <Spinner
        android:id="@+id/spinnerSort"
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/product_amount"
        style="@style/TextAppearance.MaterialComponents.Headline6"/>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="number"
        android:hint="@string/amount"/>

    <Button
        android:id="@+id/btnAddNewEntry"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

</LinearLayout>