<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="15dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="15dp" />

        <TextView
            android:id="@+id/textResetPassword"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:linksClickable="true"
            android:text="@string/textResetPassword"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textResetInfo"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textResetInfo"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textResetPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email_text"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            style="@style/Widget.Design.TextInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textResetInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLoginReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resetBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/complite"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/textFieldEmail" />

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/resetBtn"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textFieldEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/resetMsgSendLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/textResetEmailSend"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sendOk"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/complite"
            app:layout_constraintEnd_toStartOf="@+id/resetBtn"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textFieldEmail" />


    </LinearLayout>


</FrameLayout>