<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.registerFragment.RegisterFragment">

    <Toolbar
        android:id="@+id/registerToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Создать аккаунт"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="50dp"/>

    </Toolbar>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_icon_registr"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/registerToolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_text"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="50dp"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:endIconDrawable="@drawable/ic_email_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textLoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        app:boxBackgroundColor="@color/white"
        app:endIconDrawable="@drawable/ic_person_black_24dp"
        app:endIconMode="custom"
        android:layout_marginTop="15dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFemale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/female"
        app:boxBackgroundColor="@color/white"
        app:endIconDrawable="@drawable/ic_person_black_24dp"
        app:endIconMode="custom"
        android:layout_marginTop="15dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textFieldName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFemaleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        app:boxBackgroundColor="@color/white"
        app:endIconDrawable="@drawable/ic_lock_black_24dp"
        app:endIconMode="custom"
        android:layout_marginTop="15dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textFieldFemale">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        style="@style/LoginButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginGoogle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

    <Button
        android:id="@+id/buttonLoginGoogle"
        style="@style/LoginButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />


</androidx.constraintlayout.widget.ConstraintLayout>